--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 .idea
 **/.DS_Store
 
+### Project Folders ###
+secrets/
+my-app-logs/
+mysql-data/
+
 
 ############### Back End ###############
 
@@ -17,9 +22,10 @@ job-portal-backend/*.iws
 job-portal-backend/*.iml
 job-portal-backend/*.ipr
 
-### we do not push the configuration file with the Google Cloud OAuth credentials ###
+### we do not push the configuration file with the Google Cloud OAuth credentials
+### Copy the file application-with-place-holders.yml to a file named application.yml
+# and enter the Google Cloud OAuth credentials for the Back End app
 job-portal-backend/src/main/resources/application.yml
-### Copy the file application-with-place-holders.yml to a file named application.yml and enter the Google Cloud OAuth credentials for the Back End app ###
 
 
 ############### Front End ###############
