--- a/job-portal-backend/Dockerfile
+++ b/job-portal-backend/Dockerfile
@@ -1,12 +1,24 @@
-#Use a lightweight JRE for smaller images
+# Stage 1: Build the application
+FROM maven:3.9.9-eclipse-temurin-21-alpine AS build
+WORKDIR /app
+
+# Copy the pom.xml and download dependencies
+COPY pom.xml .
+RUN mvn dependency:go-offline
+
+# Copy the source code and build the application
+COPY src ./src
+RUN mvn clean package -DskipTests
+
+# Stage 2: Run the application
 FROM eclipse-temurin:21-jre-alpine
+WORKDIR /app
 
+# Copy the jar file from the build stage
+COPY --from=build /app/target/*.jar app.jar
 
-#ADD the pre-built JAR file
-ADD target/jobportal-0.0.1-SNAPSHOT.jar jobportal-0.0.1-SNAPSHOT.jar
-
-# Expose the application port
+# Expose the port the app runs on
 EXPOSE 8080
 
 # Run the application
-ENTRYPOINT ["java", "-jar", "/jobportal-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
