--- a/job-portal-backend/pom.xml
+++ b/job-portal-backend/pom.xml
@@ -10,7 +10,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>com.pluralsight</groupId>
+    <groupId>net.jrodolfo</groupId>
     <artifactId>jobportal</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>jobportal</name>
