add info for newrelic.com - the vendor for opentelemetry

--- a/doc/otel/collector-prod.yaml
+++ b/doc/otel/collector-prod.yaml
@@ -24,7 +24,7 @@ exporters:
   otlphttp/upstream:
     endpoint: ${env:OTEL_UPSTREAM_OTLP_ENDPOINT}
     headers:
-      Authorization: ${env:OTEL_UPSTREAM_AUTH_HEADER}
+      api-key: ${env:OTEL_UPSTREAM_API_KEY}
     compression: gzip
     timeout: 10s
     retry_on_failure:
